# pichay

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  review.md
.scouting/reports/: scourer1_correctness.md  scourer2_cache_cost.md  scourer3_observability.md  scourer4_provider.md
docs/: cognitive_processing_research_design.md  conversation_memory_management.md  corpus_protocol.md  design-cache-aware.md  design-phantom-extensions.md  experimental_design.md  models.txt  paper_outline.md  roadmap_t9.md
paper/: .gitignore  2026-03-06-10-21-claude-feedback.md  PAPER_ARTIFACT.md  abstract.tex  appendix.tex  authorship.tex  background.tex  conclusion.tex  discussion.tex  future.tex  introduction.tex  main.tex  main.tex.bak  measurement.tex  references.bib  reproduce_paper.sh  results.tex  system.tex
src/pichay/: cost.py  (+17 more)
tests/: test_analyzer.py  test_blocks_cleanup.py  test_gateway_chaos.py  test_gateway_core.py  test_message_ops.py  test_message_store.py  test_pager.py  test_phase2_independent.py  test_replay.py  test_tags.py  test_telemetry_contract.py  test_trimmer.py
tools/: analyze_claude_code_cache.py  build_cognitive_transactions_synthesis.py  build_olmo3_protocol_v1.py  check_paper_numbers.py  cognitive_step_harness.py  compare_phase4_runs.py  corpus_counts.py  dashboard.py  kv_cache_probe.py  kv_cache_probe_breakpoints.py  kv_cache_probe_hash.py  kv_cache_probe_lookback.py  phase2_candidate_analysis.py  phase3_olmo3_eval.py  phase4_olmo3_eval.py  replay_experiment_manifest.py  repro_meta.py  reproduce_paper_counts.sh  summarize_phase4_working_set.py
(+784 files in other folders)
